update config of the Maven surefire plugin